cardeditor.css
/* ... */
.disableable:disabled {
	background-color: var(--disabled-card-form);
	color: var(--text-disabled);
}

.disabled-text {
	color: var(--text-disabled);
}

.two-col {
	display: flex;
	flex-wrap: wrap;
	gap: 20px;
}

/* card image styles */
/* translate(-50%, -50%) for centering images  */
/* left top for where center is */
.card-container {
	width: 375px;
	height: 510px;
	display: flex;
	position: absolute;
	top: 20%;
}
.hero-container {
	width: 1000px;
	height: 510px;
	display: flex;
	position: absolute;
	left: 0px;
	top: 20%;
}

.card {
	max-width: 635px;
	max-height: 888px;
	position: absolute;
	user-select: none;
	pointer-events: none;
	transform: scale(50%) translate(-41%, -50%);
	top: 35px;
}

.card-img {
	width: 92%;
	height: 96%;
	transform: translate(-50%, 2.2%);
	left: 50%;
	object-fit: cover;
	position: absolute;
	border-radius: 10%;
	z-index: -1;
}

.hero-portrait {
	position: absolute;
	object-fit: contain;
	width: 45%;
	height: 88.25%;
	top: 5.9%;
	left: 0%;
}

.card-border {
	transform: translate(0%, -0.8%);
}

.cost {
	position: absolute;
	transform: translate(-50%, -50%);
	top: 4%
}

.coin1 {
	left: 9%;
	z-index: 3;
}

.coin2 {
	left: 14.5%;
	z-index: 2;
	visibility: hidden;
}

.coin3 {
	left: 20%;
	visibility: hidden;
}

.coinplus {
	left: 30.5%;
	visibility: hidden;
	z-index: 1;
}

.damage {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 90%;
	top: 4%
}

.ammo {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 95%;
	top: 22%
}

.delay {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 95%;
	top: 36%
}

.rarity-pin {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 50%;
	top: 96%
}

.hero-pin {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 50%;
	top: 0%;
	width: 96px;
}

.class-pin {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 7%;
	top: 24%;
}

.keyword-img {
	width: 30px;
	object-fit: contain;
	margin-left: 3px;
	margin-right: 3px;
}

.ability-holder {
	display: flex;
	flex-direction: column;
}

.bloontonium-img {
	width: 45px;
	align-self: center;
	padding-bottom: 1em;
	position: relative;
	padding-right: 0.75em;
}

.detail-description {
	display: block;
	word-break: break-word;
	width: 100%;
}

.thicker-stroke {
	top: 4px;
	-webkit-text-stroke: 0.16em black;
	color: transparent;
	position: absolute;
	width: 100%;
	word-wrap: break-word;
	margin: 0;
	font-family: 'Bloons TD';
	text-align: center;
}

.thick-stroke-detail {
	top: 1px;
	left: 0px;
	-webkit-text-stroke: 0.16em black;
	color: transparent;
	position: absolute;
	word-break: break-word;
	margin: 0;
	font-family: 'Bloons TD';
}

.thick-stroke {
	top: 2px;
	-webkit-text-stroke: 0.14em black;
	color: transparent;
	position: absolute;
	width: 100%;
	word-wrap: break-word;
	margin: 0;
	font-family: 'Bloons TD';
	text-align: center;
}

.delay-text-stroke {
	font-family: 'Bloons TD (No Infinite)' !important
}

.delay-text {
	font-family: 'Bloons TD (Small Infinite)' !important
}

.bold-text {
	display: block;
	z-index: 1;
	position: relative;
	-webkit-text-stroke: 0.1em black;
	text-align: center;
	color: var(--text-main);
	font-family: 'Bloons TD';
	word-wrap: break-word;
	margin: 0;
}

.bold-text-detail {
	display: block;
	z-index: 1;
	position: relative;
	-webkit-text-stroke: 0.1em black;
	color: var(--text-main);
	font-family: 'Bloons TD';
	word-break: break-word;
	margin: 0;
}

.title-text-container {
	position: absolute;
	font-size: 3.5em;
	left: 7.5%;
	width: 85%;
	max-height: 30%;
	bottom: 45.25%;
}

.bloontonium-cost-container {
	position: absolute;
	font-size: 2em;
	left: -62px;
	top: 16px;
	width: 55px;
	text-align: center;
}
.hero-name-banner {
	position: absolute;
	height: 65px;
	left: -61px;
	top: 17px;
}

.ability-icon-container {
	position: relative;
	width: 85px;
	top: -6px;
	left: -4px;
}
.ability-icon-button {
	width: 100%;
	position: absolute;
}
.ability-icon {
	width: 70%;
	left: 13.5px;
	top: 13.5px;
	position:absolute
}

.detail-title-text-container {
	margin: 0em 0.25em;
	font-size: 1.5em;
	position: relative;
	display: inline-block;
}

.ability-text-container {
	margin-right: 0em 0.25em;
	font-size: 1.225em;
	position: relative;
	display: inline-block;
	max-width: 270px;
}

.hero-name-container {
	margin-top: 24px;
	margin-bottom: 25.6px;
	font-size: 2em;
	position: relative;
	display: inline-block;
	min-height: 40.8px;
}

.class-text-container {
	position: absolute;
	transform: translate(-50%, -50%);
	font-size: 2.3em;
	left: 50%;
	top: 56%;
	width: 90%;
	max-height: 20%;
}

.cost-text-container {
	position: absolute;
	transform: translate(-50%, -50%);
	font-size: 6em;
	left: 9%;
	top: 4%;
	z-index: 3;
}

.damage-text-container {
	position: absolute;
	transform: translate(-50%, -50%);
	font-size: 6em;
	left: 90%;
	top: 4%;
}

.ammo-text-container {
	position: absolute;
	transform: translate(-50%, -50%);
	font-size: 6em;
	left: 95%;
	top: 20%;
}

.delay-text-container {
	position: absolute;
	transform: translate(-50%, -50%);
	font-size: 4em;
	left: 95%;
	top: 36%;
}

.description-text {
	position: absolute;
	white-space: pre-line;
	transform: translate(-50%, -50%);
	font-weight: normal;
	left: 49.8%;
	top: 74%;
	font-size: 3.2em;
	color: var(--text-main);
	text-align: center;
	width: 85%;
	height: auto;
	word-break: break-word;
	text-shadow: 0em 0.033em black;
}

.description-text-download {
	 text-shadow: 0em 0.016em black !important;
}
.flavor-text-unused {
	font-style: italic;
	font-family: 'Source Sans 3';
	paint-order: stroke fill;
	white-space: pre-line;
	position: absolute;
	transform: translate(-50%, 0%);
	left: 50%;
	font-size: 2.5em;
	color: var(--text-main);
	text-align: center;
	width: 90%;
	height: auto;
	top: 105%;
}

.flavor-text {
	position: relative;
	display: block;
	font-family: 'Source Sans 3';
	white-space: pre-line;
	font-size: 1em;
	padding: 1.25em;
	color: var(--text-main);
	text-align: center;
	height: auto;
	word-break: break-word;
	font-style: italic;
}
/* ... */

